@@ -1,0 +1,48 @@
+# Application template recipe for the rails_apps_composer. Change the recipe here:
+# https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/rails_signup_download.rb
+
+if prefer :apps4, 'rails-signup-download'
+  prefs[:authentication] = 'devise'
+  prefs[:authorization] = 'pundit'
+  prefs[:better_errors] = true
+  prefs[:deployment] = 'none'
+  prefs[:devise_modules] = false
+  prefs[:form_builder] = false
+  prefs[:frontend] = 'bootstrap3'
+  prefs[:git] = true
+  prefs[:local_env_file] = false
+  prefs[:pry] = false
+  prefs[:quiet_assets] = true
+  prefs[:starter_app] = false
+  after_everything do
+    generate 'pages:authorized -f'
+
+    repo = 'https://raw.github.com/RailsApps/rails-signup-download/master/'
+
+    # >-------------------------------[ Controllers ]--------------------------------<
+
+    copy_from_repo 'app/controllers/products_controller.rb', :repo => repo
+
+    # >-------------------------------[ Views ]--------------------------------<
+
+    copy_from_repo 'app/views/visitors/index.html.erb', :repo => repo
+    copy_from_repo 'app/views/products/product.pdf', :repo => repo
+
+    # >-------------------------------[ Routes ]--------------------------------<
+
+    copy_from_repo 'config/routes.rb', :repo => repo
+    # correct application name
+    gsub_file 'config/routes.rb', /^.*.routes.draw do/, "#{app_const}.routes.draw do"
+
+  end
+end
+
+__END__
+
+name: rails_signup_download
+description: "rails-signup-download starter application"
+author: RailsApps
+
+requires: [core]
+run_after: [git]
+category: apps
